--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7418,8 +7418,11 @@ justify-content: space-between;
   bottom: -3px;
 }
 .light .pro-inner-item {
-  color: #000;
+  color: #000 !important;
 }
 .light .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item:hover{
   color: #000;
+}
+.light .pro-sidebar .pro-menu a:hover{
+  color: orange;
 }
