--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -290,7 +290,7 @@ img.addBanner {
 .heroSection {
   padding: 50px 0px;
   min-height: 500px;
-  background: url(../images/hero.png) center no-repeat;
+  background: url(../images/sports-car-in-parking-garage-cinematic-2021-08-28-23-06-08-utc.jpeg) center no-repeat;
   background-size: cover;
   position: relative;
   height: 85vh;
@@ -628,15 +628,15 @@ section.bgHolder {
 }
 
 .bgImg01 {
-  background-image: url(../images/bgImg_01.jpg);
+  background-image: url(../images/many-classic-red-vintage-old-american-cars-parked-2022-09-27-01-00-30-utc.jpg);
 }
 
 .bgImg02 {
-  background-image: url(../images/bgImg_02.jpg);
+  background-image: url(../images/handsome-young-man-in-sports-car-wearing-suit-2021-08-30-21-48-19-utc.jpg);
 }
 
 .bgImg04 {
-  background-image: url(../images/bgImg_04.jpg);
+  background-image: url(../images/a-convertible-sports-car-on-a-country-highway-at-s-2022-03-04-02-34-56-utc.jpg);
 }
 
 .text-back {
@@ -2120,7 +2120,7 @@ body.lightTheme {
 .storeHeroSection {
   padding: 50px 0px;
   min-height: 500px;
-  background: url(../images/store-hero.png) center no-repeat;
+  background: url(../images/vintage-car-repair-challenge-2022-12-16-11-53-20-utc.jpg) center no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -2137,7 +2137,7 @@ body.lightTheme {
 .storeHeroSection.dealer {
   padding: 50px 0px;
   min-height: 500px;
-  background: url(../images/rrrr.png) center no-repeat;
+  background: url(../images/quick-briefing-before-meeting-three-cheerful-youn-2021-09-04-16-23-33-utc.jpg) center no-repeat;
   background-size: cover;
   position: relative;
 }
@@ -2198,7 +2198,7 @@ li.page-item.disabled a svg {
 }
 
 .howItWorkSection {
-  background: url(../images/howItWork.jpg) center no-repeat;
+  background: url(../images/ELEANOR-TRIBUTE-1968.png) center no-repeat;
   background-size: cover;
 }
 
@@ -3597,7 +3597,7 @@ button.iekbcc0.iekbcc9.ju367v73.ju367v7o.ju367v9c.ju367vn.ju367vec.ju367vex.ju36
     background-position: center;
 }
 .event {
-  background-image: url('../images/events-2019.jpg');
+  background-image: url('../images/american-muscle-car-driver-2022-12-16-11-47-56-utc.jpg');
   height: 59vh;
  background-position: center;
 }
