--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -6777,7 +6777,7 @@ h2.verticalTitle:before {
 }
 .PostInfo {
   display: flex;
-  background: #232323;
+  background: #121212;
   padding: 25px;
   margin-bottom: 25px;
 }
@@ -7619,4 +7619,23 @@ button.btn.sub {
     text-transform: capitalize;
     font-weight: 100;
     letter-spacing: 1px;
+}
+.PostInfo .field {
+  background-color: #121212;
+  color: #fff;
+  border: none;
+  border-bottom: 1px solid #333131;
+  border-radius: 0px;
+  padding: 0;
+}
+.youD button.btn {
+  padding: 10px 30px;
+  height: fit-content;
+  margin-top: 10px;
+}
+
+.light .PostInfo .light .field{
+
+    background: #f7f7f7;
+
 }
