--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7641,3 +7641,17 @@ button.btn.sub {
 .list_wrapper .bestSellerRgt {
   top: -6px;
 }
+.pl-0 { padding-left: 0;}
+
+select.size {
+  width: 20%;
+  background: transparent;
+  padding: 10px;
+  margin-right: 11px;
+  border: 1px solid #e0e0e0;
+  border-radius: 5px;
+  color: #fff;
+}
+.light select.size {
+  color: #000;
+}
