--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7655,3 +7655,13 @@ select.size {
 .light select.size {
   color: #000;
 }
+
+.watchlistStyle{
+    display: flex;
+    justify-content: space-between;
+}
+
+.watchlistStyleBtn{
+    border: none;
+    background: none;
+}
