--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7655,3 +7655,16 @@ select.size {
 .light select.size {
   color: #000;
 }
+
+button.btn.btn_change svg {
+  font-size: 17px !important;
+  background: #000;
+  padding: 6px;
+  border-radius: 15px;
+  top: 3px;
+  position: relative;
+}
+svg.svg-inline--fa.fa-bell.d {
+  padding: 6px;
+  font-size: 19px;
+}
