--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7475,6 +7475,8 @@ justify-content: space-between;
   border: none;
   border-bottom: 1px solid #f78f15;
   color: #fff;
+
+  padding: 10px;
 }
 .neDesT button {
   background: transparent;
@@ -7676,4 +7678,11 @@ svg.svg-inline--fa.fa-bell.d {
 .watchlistStyleBtn{
     border: none;
     background: none;
+}
+.light .neDesT button{
+  color: #000;
+}
+.light .nav-pills .nav-link.active, .nav-pills .show>.nav-link {
+  border-bottom: 1px solid orange;
+  background: orange;
 }
