--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7515,6 +7515,7 @@ justify-content: space-between;
   position: absolute;
   top: -4px;
   left: -1px;
+  z-index: 1;
 }
 .bestSellerRgt:after {
     content: '';
