--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -682,7 +682,7 @@ section.bgHolder {
 .post_labelList li {
   font-size: 12px;
   color: #fff;
-  margin-right: 20px;
+  margin-right: 10px;
   margin-bottom: 7px;
   display: inline-flex;
   align-items: center;
@@ -3607,8 +3607,8 @@ button.iekbcc0.iekbcc9.ju367v73.ju367v7o.ju367v9c.ju367vn.ju367vec.ju367vex.ju36
 }
 .event {
   background-image: url('../images/american-muscle-car-driver-2022-12-16-11-47-56-utc.jpg');
-  height: 59vh;
- background-position: center;
+  height: 51vh;
+  background-position: inherit;
 }
 
 .mission_section p 
@@ -6179,7 +6179,7 @@ h3.sliderTile {
 .newDelarSlid.carousel {
   position: relative;
   width: 100% !important;
-  height: 650px;
+  height: 500px;
   align-items: center;
   display: flex;
   overflow: hidden;
@@ -6302,13 +6302,13 @@ h3.sliderTile {
   align-items: center;
   justify-content: center;
   color: #fff;
-  background: rgb(255 165 0 / 32%);;
+  background: rgb(255 165 0 / 32%);
   cursor: pointer;
   opacity: 0;
   transition: opacity 0.3s;
-  left: 0px;
-  width: 97%;
-  height: 100%;
+  left: inherit;
+    width: 100%;
+    height: 100%;
 }
 .galleryPh .ant-image .ant-image-img:hover{background: rgb(255 165 0 / 32%);}
 
@@ -6729,7 +6729,7 @@ h2.verticalTitle {
   letter-spacing: 9px;
 }
 h2.verticalTitle:before {
-  content: "Gallery";
+  content: "Garage ";
   position: absolute;
   top: -40px;
   width: 100%;
@@ -7529,6 +7529,15 @@ justify-content: space-between;
     border-bottom: 13px solid transparent;
 }
 
+ .bestSellerRgt:after {
+  content: '';
+  width: 0;
+  height: 0;
+  top: 0;
+  position: absolute;
+ background-image: url(../images/bookmark.svg);
+}
+
 h2.title_combo {
   position: relative;
   top: 17px;
@@ -7698,4 +7707,21 @@ svg.svg-inline--fa.fa-bell.d {
 }
 button.ml-3.watchlistStyleBtn {
   color: orange;
+}
+p.userIco span {
+  color: #fff;
+   
+    padding: 15px;
+    margin-right: 0;
+}
+ul.post_labelList li p.userIco {
+  width: 38px;
+  height: 32px;
+  display: flex;
+  align-items: center;
+  border-radius: 100%;
+  overflow: hidden;
+  margin-bottom: 0;
+  padding: 0px;
+  background-color: #f8a504 !important;
 }
