--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -290,7 +290,7 @@ img.addBanner {
 .heroSection {
   padding: 50px 0px;
   min-height: 500px;
-  background: url(../images/sports-car-in-parking-garage-cinematic-2021-08-28-23-06-08-utc-min.png) center no-repeat;
+  background: url(../images/home_banner.png) center no-repeat;
   background-size: cover;
   position: relative;
   height: 85vh;
@@ -7747,4 +7747,12 @@ ul.post_labelList li p.userIco {
 }
 .modal-body .PostInfo {
   padding: 20px !important;
+}
+
+.heroText.textAlignLeft {
+  text-align: left;
+}
+.deTitle {
+  margin-bottom: 0;
+  top: 6px;
 }
