--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -5120,6 +5120,7 @@ input[type=file] {
   color: white;
 
 }
+.orange_btn{border-radius: 8px;}
 
 .raffle table {
   font-size: 12px;
@@ -7762,4 +7763,8 @@ ul.post_labelList li p.userIco {
   left: 5px;
   max-width: 100%;
   top: 6px;
+}
+.text-danger {
+  color: #dc3545!important;
+  font-weight: 300;
 }
