--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7807,3 +7807,15 @@ ul.post_labelList li p.userIco {
   background-size: cover;
   top: 260px;
 }
+li.avtar span {
+  width: 150px;
+  height: 140px;
+  background: #000;
+  border-radius: 140px;
+  overflow: hidden;
+}
+li.avtar span img {
+  min-width: 100%;
+  min-height: 100%;
+  object-fit: cover;
+}
