--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7730,13 +7730,16 @@ ul.post_labelList li p.userIco {
   background-repeat: no-repeat;
   top: -6px;
   height: 31px;
-  width: 40%;
+  width: auto;
 }
 
 .card_postImg .bestSellerRgt {background-color: transparent;
 }
 .bestSellerRgt.charity {
   background-image: url(../images/pinkRibin.png);
+}
+.bestSellerRgt.noReserve {
+  background-image: url(../images/pinkRibinzBlack.png);
 }
 
 
@@ -7818,4 +7821,7 @@ li.avtar span img {
   min-width: 100%;
   min-height: 100%;
   object-fit: cover;
+}
+.newDelarSlid.carousel {
+  height: 500px;
 }
