--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7886,15 +7886,6 @@ p.notiFi {
     background-size: cover;
     background-position: right;
 }
-.SearchResult .bestSellerRgt:after{
- border: none;
-}
-p.grTe {
+.SearchResult .bestSellerRgt:after{ border: none;}
 
-  padding: 10px;
-  border-radius: 10px;
-  width: 20%;
-  margin: 0 auto;
-  background: #f7931b;
-  color: #fff !important;
-}
+p.grTe { padding: 10px; border-radius: 10px; width: 20%; margin: 0 auto;  background: #f7931b; color: #fff !important;}
