--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7888,20 +7888,9 @@ p.notiFi {
 }
 .SearchResult .bestSellerRgt:after{ border: none;}
 
-  /* padding: 10px;
-  border-radius: 10px;
-  width: 20%;
-  margin: 0 auto;
-  background: #f7931b;
-  color: #fff !important;
-} */
+p.grTe { padding: 10px; border-radius: 10px; width: 20%; margin: 0 auto;  background: #f7931b; color: #fff !important;}
+p.grTe1 { padding: 10px; border-radius: 10px; width: 20%; margin: 0 auto;  background: #282520; color: #fff !important;}
 
-.inputData{
-  display: flex;
-}
-.inputDataInput{
-      padding: 5px;
-    border-radius: 6px;
-    outline: none;
-  
-}
+/* grTe1{
+  background-color:#282520 !important
+} */
