--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7905,3 +7905,56 @@ p.notiFi {
     outline: none;
   
 }
+
+
+button.btn.btn-link.fdrD {
+  padding: 0;
+  border: navajowhite;
+  background: transparent;
+  color: #000;
+  font-weight: 200;
+  text-transform: capitalize;
+  text-align: left;
+}
+
+.accordion .card-header {
+  padding: 0px 17px;
+  background-color: #e5e4e4;
+}
+.collapse.show {
+  background-color: #e5e4e4;
+}
+.collapse.show .card-body {
+  text-align: left;
+}
+.collapse.show .card-body a {
+  display: block;
+  padding: 8px 5px;
+}
+
+.accordion .card-header {
+  padding: 10px 20px;
+  margin-bottom: 0;
+  background-color: rgb(229 228 228);
+  border-bottom: 0px solid rgb(229 228 228);
+}
+.accordion .card{background-color: rgb(229 228 228);
+  border-bottom: 0px solid rgb(229 228 228);border: none;}
+
+  .pro-sidebar .pro-menu .pro-menu-item > .pro-inner-item {
+    position: relative;
+    display: flex;
+    align-items: center;
+    padding: 8px 35px 8px 20px;
+    cursor: pointer;
+    padding: 0;
+}
+.accordion .collapse.show .card-body a{padding: 0;}
+.card-body.Edv {
+  padding: 0;
+  padding-left: 10px;
+}
+.Edv .pro-menu-item {
+  font-size: 15px;
+  padding: 0;
+}
