--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7963,8 +7963,16 @@ button.btn.btn-link.fdrD {
 .notiFicIcon {
   position: absolute;
   z-index: 9999;
-  right: 26px;
+  right: 6%;
   color: #f8a504;
-  background: #000;
+  background: #17171799;
   border-radius: 100px;
+  min-width: 31px;
+  text-align: center;
+  padding: 2px;
+  font-size: 19px;
+  min-height: 29px;
+}
+.card_post:hover .notiFicIcon {
+  right: 5px;
 }
