--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7760,10 +7760,10 @@ ul.post_labelList li p.userIco {
 .modal-body .PostInfo {
   padding: 20px !important;
 }
-/* 
+
 .heroText.textAlignLeft {
   text-align: left;
-} */
+}
 .deTitle {
   margin-bottom: 0;
   top: 6px;
