--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -628,7 +628,7 @@ section.bgHolder {
 }
 
 .bgImg01 {
-  background-image: url(../images/many-classic-red-vintage-old-american-cars-parked-2022-09-27-01-00-30-utc.jpg);
+  background-image: url(../images/DODGE.jpg);
 }
 
 .bgImg02 {
