--- a/src/Assets/css/style.css
+++ b/src/Assets/css/style.css
@@ -7105,9 +7105,9 @@ table.table.table-striped img {
 .right .dropdown {
     margin-right: 10px;
 }
-.featuredAuctions_Slide .slick-track {
+/* .featuredAuctions_Slide .slick-track {
   width: 950px !important;
-}
+} */
 
 tr.right-align .btn {
   margin: 0px 5px;
